deploy auto to heroku and github commit
